--- a/numpy/numpy2.ipynb
+++ b/numpy/numpy2.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -152,17 +152,6 @@
       "[1 4 9]\n",
       "[2 4 6]\n",
       "[3 5 7]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (3,) (4,) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[39mprint\u001b[39m(arr3\u001b[39m+\u001b[39marr3)\n\u001b[0;32m      8\u001b[0m \u001b[39mprint\u001b[39m(arr3\u001b[39m+\u001b[39marr33)\n\u001b[1;32m---> 10\u001b[0m arr3\u001b[39m+\u001b[39;49marr4\n",
-      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,) (4,) "
      ]
     }
    ],
@@ -179,13 +168,6 @@
     "# arr3+arr4 는 불가능\n",
     "# array의 연산은 array들의 길이가 같은 경우에만 가능하다!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -204,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.9 (tags/v3.9.9:ccb0e6a, Nov 15 2021, 18:08:50) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
